--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="new_note">New note</string>
     <string name="delete">delete</string>
     <string name="action_edit">edit</string>
+    <string name="action_share">share</string>
     <string name="confirm">confirm</string>
 </resources>
